2004-07-14 Kilian Krause <kk@verfaction.de>

	* configure.in: updated REC versions of libs.

2004-07-14  Julien Puydt  <jpuydt@free.fr>

	* lib/contacts/gm_contacts-eds.cpp
	(gnomemeeting_local_addressbook_get_contacts)
	(gnomemeeting_local_addressbook_add_contact)
	(gnomemeeting_local_addressbook_modify_contact): Added the code to
	store and retrieve the email address of the contacts too.
	* src/addressbook_window.cpp (gm_aw_get_selected_contact)
	(gm_addressbook_window_edit_contact_dialog_run): Added the code to
	move around the email address of the contacts too.

2004-07-14  Julien Puydt  <jpuydt@free.fr>

	* src/addressbook_window.h, src/addressbook_window.cpp
	(gm_addressbook_window_edit_contact_dialog_run): Renamed the variable
	edit_local_contact to the more accurate edit_existing_contact,
	and made it an argument to the function, since its computation is 
	problematic.
	(new_contact_cb, properties_cb): Made it cope with the previous change.
	* src/calls_history_window.cpp (add_contact_cb): Likewise.

2004-07-07  Julien Puydt <jpuydt@free.fr>

	* lib/contacts/gm_contacts.cpp: Fixed a little bug in the
	gnomemeeting_addressbook_is_local function (found by myself, fix
	by Damien).
	
2004-07-06  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp: Added notifiers for STUN support.

2004-07-06  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in, src/endpoint.cpp, src/pref_window.cpp:
	Added preliminary STUN support to go through non-symmetric NAT routers.

	* src/main_window.cpp: Cleanups.

2004-07-05 Kilian Krause <kk@verfaction.de>

	* configure.in: Updated REC versions of libs.

2004-07-04  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Lowered deps.

	* src/endpoint.cpp: Removed code using ffmpeg capabilities.

2004-06-29  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/endpoint.cpp, src/gnomemeeting.cpp, src/lid.cpp, 