@@ -246,6 +246,17 @@
       </locale>
     </schema>
     <schema>
+      <key>/schemas/apps/gnomemeeting/general/sound_events/output_device</key>
+      <applyto>/apps/gnomemeeting/general/sound_events/output_device</applyto>
+      <owner>GnomeMeeting</owner>
+      <type>string</type>
+      <default>None</default>
+      <locale name="C">
+	<short>Audio output device</short>
+	<long>Select the audio output device to use for sound events</long>
+      </locale>
+    </schema>
+    <schema>
       <key>/schemas/apps/gnomemeeting/general/sound_events/incoming_call_sound</key>
       <applyto>/apps/gnomemeeting/general/sound_events/incoming_call_sound</applyto>
       <owner>GnomeMeeting</owner>
