@@ -1,4 +1,11 @@
-2004-07-14 Kilian Krause <kk@verfaction.de>
+2004-07-14  Damien Sandras  <dsandras@gnome.org>
+
+	* gnomemeeting.schemas.in.in, src/common.h, src/pref_window.cpp, 
+	src/sound_handling.cpp: Added the possibility for people who have
+	several output devices to play sound events through a different device
+	than the one they are using for gnomemeeting VoIP calls.
+
+2004-07-14  Kilian Krause <kk@verfaction.de>
 
 	* configure.in: updated REC versions of libs.
 
